--- a/gallery.html
+++ b/gallery.html
@@ -20,6 +20,7 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <script type="text/javascript" src="js/jquery.flipping_gallery.js"></script>
 	    <link href='css/flipping_gallery.css' rel='stylesheet' type='text/css'>
+        <script src="js/flippinggallery.js"></script>
     </head>
     <body>
         <div>
@@ -29,44 +30,6 @@
         <h1 id="Yo">Adventures</h1>
         <div class="gallery">
             <a href="#"><img id="Ash--Chicago" src="img/Ash_Chicago.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0821.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0822.jpg"></a>    
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0823.jpg"></a>  
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0824.jpg"></a>      
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0825.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0826.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0827.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0828.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0829.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0830.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0831.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0832.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0833.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0834.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0835.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0836.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0837.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0838.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0839.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0840.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0841.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0842.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0843.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0844.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0846.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0847.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0848.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0849.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0850.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0851.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0852.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0853.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0854.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0855.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0856.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0857.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0858.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0859.jpg"></a>
             <a href="#"><img id="Ash--Chicago" src="img/DSCN0860.jpg"></a>
             <a href="#"><img id="Ash--Chicago" src="img/DSCN0861.jpg"></a>
             <a href="#"><img id="Ash--Chicago" src="img/DSCN0862.jpg"></a>
