--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                 <li><a class="tab" href="gallery.html">Gallery</a></li>
             </div>
    
-            <form id="form" action="about.html">
+            <form id="form" action="https://formspree.io/aaeisenmenger@gmail.com">
                 <label for="firstname_1">First Name:</label>
                 <br>
                 <input id="firstname_1" type="text" name="firstname" placeholder="First Name">
@@ -92,7 +92,7 @@
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='https://www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+            ga('create','UA-99050065-1','auto');ga('send','pageview');
         </script>
     </body>
 </html>
