--- a/about.html
+++ b/about.html
@@ -43,15 +43,15 @@
                 <p class="Jesse2"> This video was produced and edited by Jesse Goddard.</p>
             </details>
 
-            <img id="Ash_Chicago" src="img/Ash_Chicago.jpg">
+            <img id="Ash_Chicago" src="img/Ash_Chicago.JPG">
 
-            <img id="Ashley_NCC" src="img/Ashley_NCC.jpg">
+            <img id="Ashley_NCC" src="img/Ashley_NCC.JPG">
 
             <img id="Ashley_signiture" src="img/Ashley_signiture.png">
 
-            <img id="pre_race" src="img/Pre_Race_1.jpg">
+            <img id="pre_race" src="img/Pre_Race_1.JPG">
 
-            <img id="biking_5" src="img/Biking_5.jpg">
+            <img id="biking_5" src="img/Biking_5.JPG">
 
             <a style="text-align: right" href="https://howashleyseesit.wordpress.com/"><img alt="Link to Ashley's blog." id="wordpress-logo" src="img/wordpress-logo-notext-rgb.png"></a>
 
