--- a/contact.html
+++ b/contact.html
@@ -59,9 +59,9 @@
                 <input type="submit" value="Send">
             </form> 
         <div>
-            <img id="bike_transition" src="img/Biking_3.jpg">
+            <img id="bike_transition" src="img/Biking_3.JPG">
 
-            <img id="pre_race_2" src="img/Pre_race_2.jpg">
+            <img id="pre_race_2" src="img/Pre_race_2.JPG">
         </div>
 
         <div id="map"> 
