--- a/gallery.html
+++ b/gallery.html
@@ -29,18 +29,18 @@
         <h1 id="pictures">Ashley's</h1>
         <h1 id="Yo">Adventures</h1>
         <div class="gallery">
-            <a href="#"><img id="Ash--Chicago" src="img/Ash_Chicago.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0860.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0861.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0862.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0863.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0864.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0865.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0866.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0867.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0868.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0869.jpg"></a>
-            <a href="#"><img id="Ash--Chicago" src="img/DSCN0870.jpg"></a>
+            <a href="#"><img id="Ash--Chicago" src="img/Ash_Chicago.JPG"></a>
+            <a href="#"><img id="Ash--Chicago" src="img/DSCN0860.JPG"></a>
+            <a href="#"><img id="Ash--Chicago" src="img/DSCN0861.JPG"></a>
+            <a href="#"><img id="Ash--Chicago" src="img/DSCN0862.JPG"></a>
+            <a href="#"><img id="Ash--Chicago" src="img/DSCN0863.JPG"></a>
+            <a href="#"><img id="Ash--Chicago" src="img/DSCN0864.JPG"></a>
+            <a href="#"><img id="Ash--Chicago" src="img/DSCN0865.JPG"></a>
+            <a href="#"><img id="Ash--Chicago" src="img/DSCN0866.JPG"></a>
+            <a href="#"><img id="Ash--Chicago" src="img/DSCN0867.JPG"></a>
+            <a href="#"><img id="Ash--Chicago" src="img/DSCN0868.JPG"></a>
+            <a href="#"><img id="Ash--Chicago" src="img/DSCN0869.JPG"></a>
+            <a href="#"><img id="Ash--Chicago" src="img/DSCN0870.JPG"></a>
         </div>
 
         <div class="navigation">
