--- a/triathlon.html
+++ b/triathlon.html
@@ -27,11 +27,11 @@
             <div>
                 <img alt="Ashley and her guide swimming in open-water." id="swimming" src="img/swimming_1.jpg">
 
-                <img alt="Ashley and her guide biking." id="biking" src="img/Biking_NCC.jpg">
+                <img alt="Ashley and her guide biking." id="biking" src="img/Biking_NCC.JPG">
 
-                <img alt="Ashley and her guide running." id="running" src="img/Running_3.jpg">
+                <img alt="Ashley and her guide running." id="running" src="img/Running_3.JPG">
 
-                <img alt="Ashley and her guide focusing on the race" id="Ash_squat" src="img/Ash_squat.jpg">
+                <img alt="Ashley and her guide focusing on the race" id="Ash_squat" src="img/Ash_squat.JPG">
             </div>
 
         <!--[if lt IE 8]>
