--- a/triathlon.html
+++ b/triathlon.html
@@ -25,7 +25,7 @@
         <p id="triathlon_2">Paratriathlon has a similar style to triathlon, but the athletes that compete in paratriathlon have some kind of physical disability or a visual impairment.  Blind or visually impaired athletes race with the assistance of a sighted guide.  Other athletes use various types of adaptive equipment.</p> 
 
             <div>
-                <img alt="Ashley and her guide swimming in open-water." id="swimming" src="img/swimming_1.jpg">
+                <img alt="Ashley and her guide swimming in open-water." id="swimming" src="img/swimming_1.JPG">
 
                 <img alt="Ashley and her guide biking." id="biking" src="img/Biking_NCC.JPG">
 
