--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         <div>
             <iframe id="video" src="https://player.vimeo.com/video/126887992" width="340" height="180" align="right" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             
-            <details open id="video_credits">
+            <details id="video_credits">
                 <summary>Click here</summary>
                 <p class="Jesse"><a id="vid" href="https://vimeo.com/126887992">Challenging Limits</a> from <a id="vid" href="https://vimeo.com/user23604563">Jesse Goddard</a> on <a id="vid" href="https://vimeo.com">Vimeo</a>.</p>
                 <p class="Jesse2"> This video was produced and edited by Jesse Goddard.</p>
