--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Gallery</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -55,6 +55,9 @@
                 <li><a class="tab" href="contact.html">Contact Ashley</a></li>
                 <li><a class="tab" href="gallery.html">Gallery</a></li>
             </div>
+
+
+
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -64,7 +67,7 @@
 
             <!--<span onclick="openNav()"">Open</span>-->
 
-
+            <footer>&copy 2017 Ashley Eisenmenger</footer>
 
 
 
