--- a/triathlon.html
+++ b/triathlon.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>What is Triathlon?</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -52,7 +52,7 @@
 
             <!--<span onclick="openNav()"">Open</span>-->
 
-
+            <footer>&copy 2017 Ashley Eisenmenger</footer>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
