--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>About</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -75,7 +75,7 @@
             </div>
 
 
-
+            <footer>&copy 2017 Ashley Eisenmenger</footer>
 
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
