--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Ashley Eisenmenger</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -42,6 +42,8 @@
             <div>
             <span onclick="openNav()"</span> <img id="open" src="img/navbar_open_logo.png" height="30px" width="30px">
             </div>
+
+            <footer>&copy 2017 Ashley Eisenmenger</footer>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
