--- a/products-list.html
+++ b/products-list.html
@@ -36,10 +36,28 @@
 	<div class="row">
 		<div class="col-md-12">
 			
-			<ul>
-				<li>Laptops</li>
-				<li>Desktops</li>
-			</ul>
+			<table class="table table-striped table-hover">
+				<thead>
+					<tr>
+					<th>Brand</th>
+					<th>Name</th>
+					<th>Price</th>
+					<th></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Ticonderoga</td>
+						<td>#2 Pencil</td>
+						<td>$2.98</td>
+						<td>
+							<a href="product-details.html?id={id}">
+								Click to View
+							</a>
+						</td>
+					</tr>
+				</tbody>
+			</table>
 			
 		</div>
 	</div>
@@ -52,6 +70,6 @@
 <script src="js/bootstrap.js" type="text/javascript"></script>
 
 <!-- custom code for web page -->
-<script src="js/categories-list.js" type="text/javascript"></script>
+<script src="js/products-list.js" type="text/javascript"></script>
 </body>
 </html>
