--- a/product-details.html
+++ b/product-details.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.9";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
     <nav class="navbar navbar-default">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -112,7 +120,8 @@
         <div class="row">
             <div id="leave-a-comment" class="col-md-12">
                 
-                <form class="form" action="#">
+                <form class="form" action="https://formspree.io/csc175-final@mailinator.com"
+                method="POST">
                     <h2>Leave a Comment</h2>
                     <div class="form-group">
                         <label for="email">Email</label>
@@ -120,11 +129,11 @@
                     </div>
                     <div class="form-group">
                         <label for="firstName">First Name</label>
-                        <input type="text" class="form-control" id="firstName" name="firstName">
+                        <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name">
                     </div>
                     <div class="form-group">
                         <label for="lastName">Last Name</label>
-                        <input type="text" class="form-control" id="lastName" name="lastName">
+                        <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name">
                     </div>
 
                     <button type="submit" class="btn btn-default">Submit</button>
@@ -133,6 +142,8 @@
             </div>            
         </div>
     </div>
+
+<div class="fb-like" data-href="https://eeisenmenger1.github.io/product-details.html?itemsku=7306011" data-layout="standard" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
 
     <!-- JS -->
     <!-- this is the jQuery CDN reference. You need internet access for this file! -->
