--- a/product-details.html
+++ b/product-details.html
@@ -120,6 +120,8 @@
 <a href="https://twitter.com/TwitterDev" class="twitter-follow-button" data-show-screen-name="false" data-show-count="false">Follow @TwitterDev</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 <br>
 <div class="fb-like" data-href="https://eeisenmenger1.github.io/product-details.html?itemsku=7306011" data-layout="standard" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
+<br>
+<a data-pin-do="buttonFollow" href="https://www.pinterest.com/pinterest/">Pinterest</a>
         
         <div class="row">
             <div id="leave-a-comment" class="col-md-12">
@@ -157,6 +159,7 @@
     <!-- custom code for web page -->
     <script src="js/product-details.js" type="text/javascript"></script>
     <script src="js/jquery.validate.min.js"></script>
+    <script async defer src="//assets.pinterest.com/js/pinit.js"></script>
 </body>
 
 </html>
