--- a/product-details.html
+++ b/product-details.html
@@ -141,6 +141,11 @@
                         <label for="lastName">Last Name</label>
                         <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name">
                     </div>
+                    <div class="form-group">
+                        <div class="rating">
+                            <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
+                        </div>
+                    </div>
 
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
