--- a/product-details.html
+++ b/product-details.html
@@ -6,6 +6,7 @@
     <title>CSC 175</title>
 
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/rating.css">
 </head>
 
 <body>
