--- a/product-details.html
+++ b/product-details.html
@@ -144,6 +144,7 @@
                     </div>
                     <div class="form-group">
                         <div class="rating">
+                            <label for="rating">Rating</label>
                             <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
                         </div>
                     </div>
