--- a/product-details.html
+++ b/product-details.html
@@ -143,9 +143,7 @@
                         <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name">
                     </div>
                     <div class="form-group">
-                        <!--<div class="rating">-->
-                        <label for="rating">Rating</label>
-                        <br>
+                        <div class="rating">
                         <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
                         </div>
                     </div>
