--- a/product-details.html
+++ b/product-details.html
@@ -19,7 +19,7 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
     <nav class="navbar navbar-default">
-        <div class="container">
+        <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
@@ -35,7 +35,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="index.html">Home <span class="sr-only"></span></a></li>
+                    <li><a id="homeLink" href="index.html">Home <span class="sr-only"></span></a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -143,18 +143,25 @@
                         <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name">
                     </div>
                     <div class="form-group">
+                        <label for="ratingStar">Rating</label><br>
                         <div class="rating">
                         <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
+
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label for="comment">Comment</label>
+                        <input type="text" class="form-control" id="comment" name="comment" placeholder="Your comment here">
+                        <br>
+                        <p id="commentRow">**Comments will be posted within 48 hours upon review.</p>
                     <br>
-                    <br>
+                    </div>
+
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
                 
             </div>            
         </div>
-    </div>
 
 
 
