--- a/products-list.html
+++ b/products-list.html
@@ -5,6 +5,7 @@
 	<title>CSC 175</title>
 	
 	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <nav class="navbar navbar-default">
