--- a/index.html
+++ b/index.html
@@ -1,58 +1,71 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8">
-	<title>CSC 175</title>
-	
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-<nav class="navbar navbar-default">
-	<div class="container">
-		<!-- Brand and toggle get grouped for better mobile display -->
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-			aria-expanded="false">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="https://www.parklandbookstore.com/">Parkland Bookstore</a>
-		</div>
+<!doctype html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>Ashley's Survey</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<!-- Collect the nav links, forms, and other content for toggling -->
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="nav navbar-nav">
-				<li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-			</ul>
-		</div>
-		<!-- /.navbar-collapse -->
-	</div>
-	<!-- /.container-fluid -->
-</nav>
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <!-- Place favicon.ico in the root directory -->
 
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			
-			<ul>
-				<li>Laptops</li>
-				<li>Desktops</li>
-			</ul>
-			
-		</div>
-	</div>
-	
-</div>
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <script type="text/JavaScript">
+        function killCopy(e){
+            return false
+        }
+        function reEnable(){
+            return true
+        }
+        document.onselectstart=new Function ("return false")
+        if (window.sidebar){
+            document.onmousedown=killCopy
+            document.onClick=reEnable
+        }
+        </script>
+    </head>
+    <body>
+        <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
 
-<!-- JS -->
-<!-- this is the jQuery CDN reference. You need internet access for this file! -->
-<script src="https://code.jquery.com/jquery-2.1.4.js" type="text/javascript"></script>
-<script src="js/bootstrap.js" type="text/javascript"></script>
+        <!-- Add your site or application content here -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Ashley's Survey</h1>
+                <form style="text-align: center;" action="https://formspree.io/aaeisenmenger@gmail.com"              method="POST">
+                    <p>What does it mean for something to be accessible for the blind and visually impaired?</p>
+                    <input id="answer1" type="text" name="answer1"><br>
+                    <p>How can accessibility be improved for the blind and visually impaired?</p>
+                    <input id="answer2" type="text" name="answer2"><br>
+                    <p>What ideas do you have to make the Internet more accessible for the blind and visually impaired?</p>
+                    <input id="answer3" type="text" name="answer3"><br>
+                    <p>Should fair access laws exsist to help make pages being accessible? Why or why not?</p>
+                    <input id="answer4" type="text" name="answer4"><br>
+                    <br>
+                    <input id="submit" type="submit" value="Submit">
+                </form>
+            </div>
+        </div>
+    </div>
+        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+        <script src="js/plugins.js"></script>
+        <script src="js/main.js"></script>
 
-<!-- custom code for web page -->
-<script src="js/categories-list.js" type="text/javascript"></script>
-</body>
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='https://www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+        </script>
+    </body>
 </html>
