--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="col-md-12">
                 <h1>Ashley's Survey</h1>
-                <form style="text-align: center;" action="https://formspree.io/aaeisenmenger@gmail.com"              method="POST">
+                <form style="text-align: center;" action="https://formspree.io/aaeisenmenger@noctrl.edu"              method="POST">
                     <p>What does it mean for something to be accessible for the blind and visually impaired?</p>
                     <input id="answer1" type="text" name="answer1"><br>
                     <p>How can accessibility be improved for the blind and visually impaired?</p>
