Name Field Added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <div class="col-md-12">
                 <h1>Accessibility Survey</h1>
                 <form style="text-align: center;" action="https://formspree.io/aaeisenmenger@noctrl.edu"              method="POST">
+                    <input id="name" type="text" name="name" placeholder="Name"><br>
                     <p>What does it mean for something to be accessible for the blind and visually impaired?</p>
                     <input id="answer1" type="text" name="answer1"><br>
                     <p>How can accessibility be improved for the blind and visually impaired?</p>
