--- a/triathlon.html
+++ b/triathlon.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="col-sm-6 col-lg-6">
-                        <img class="img-responsive" alt="Ashley and her guide swimming in open-water." id="swimming" src="img/swimming_1.JPG">
+                        <img class="img-responsive" alt="Ashley and her guide swimming in open-water." id="swimming" src="img/Swimming_1.JPG">
                     </div>
                     <div class="col-sm-6 col-lg-6">
                         <img class="img-responsive" alt="Ashley and her guide biking." id="biking" src="img/Biking_NCC.JPG">
