--- a/about.html
+++ b/about.html
@@ -32,13 +32,28 @@
                 <div class="col-md-2.left">
                     <span onclick="openNav()"</span> <img alt="Open navigation menu." id="open" src="img/navbar_open_logo.png" height="35px" width="50px">
                 </div>
-                <div class="col-md-6.right">
+                <div class="col-md-12">
                     <h1 id="about1">About Ashley</h1>
-                </div class="col-md-6">
-                    <p id="about_ashley">Ashley Eisenmenger has been blind all of her life. <br> As a result of premature birth, Ashley and her triplet<br> sisters were diagnosed with retinopathy of prematurity, <br>an eye condition common among premature babies. <br> Ashley grew up playing a wide range of sports, but<br> settled into endurance running upon entering high<br> school.  By the time she had graduated high school,<br> Ashley had completed two half marathons and<br> multiple 5k and 10k races. After graduating high<br> school, Ashley, alongside a friend, completed her<br> first triathlon.  From that finish line on there was<br> no looking back.  Ashley has completed multiple <br>sprint distance triathlons, two Olympic distance <br>triathlons, and one half Ironman.  Ashley competes <br>on North Central College’s Women’s Triathlon <br>Team.  After being named the 2016 Paratriathlon <br>National Champion, Ashley was named to the<br> Team USA Paratriathlon Development Team. <br> Ashley continues to race competitively and<br> will graduate college in the spring of 2018.</p>
+                </div>
+                <div class="col-md-12">
+                    <p id="about_ashley">Ashley Eisenmenger has been blind all of her life. As a result of premature birth, Ashley and her triplet<br> sisters were diagnosed with retinopathy of prematurity, an eye condition common among premature babies. <br> Ashley grew up playing a wide range of sports, but settled into endurance running upon entering high<br> school.  By the time she had graduated high school, Ashley had completed two half marathons and<br> multiple 5k and 10k races. After graduating high school, Ashley, alongside a friend, completed her<br> first triathlon.  From that finish line on there was no looking back.  Ashley has completed multiple <br>sprint distance triathlons, two Olympic distance triathlons, and one half Ironman.  Ashley competes <br>on North Central College’s Women’s Triathlon Team.  After being named the 2016 Paratriathlon <br>National Champion, Ashley was named to the Team USA Paratriathlon Development Team. <br> Ashley continues to race competitively and will graduate college in the spring of 2018.</p>
+                </div>
+                <div class="col-md-12">
+                    <img class="center-block img-responsive" id="Ashley_signiture" src="img/Ashley_signiture.png">
                 </div>
             </div>
             <div class="row">
+                <div class="col-sm-4">
+                    <img class="img-responsive" id="Ash_Chicago" src="img/Ash_Chicago.JPG">
+                </div>
+                <div class="col-md-4">
+                    <iframe id="video" src="https://player.vimeo.com/video/126887992" width="340" height="180" align="right" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+                <div class="col-sm-4">
+                    <img class="img-responsive" id="Ashley_NCC" src="img/Ashley_NCC.JPG">
+                </div>
+            </div>
+            <!--<div class="row">
                 <div class="col-md-12.right">
                     <iframe id="video" src="https://player.vimeo.com/video/126887992" width="340" height="180" align="right" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                       <details id="video_credits">
@@ -47,24 +62,24 @@
                         <p class="Jesse2"> This video was produced and edited by Jesse Goddard.</p>
                     </details>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-2 col-md-4">
+            </div>-->
+            <!--<div class="row">
+                <div class="col-md-12">
                     <img id="Ashley_signiture" src="img/Ashley_signiture.png">
-                </div>
-                <div class="col-sm-2 col-md-4">
+                </div>-->
+                <!--<div class="col-sm-2 col-md-4">
                     <img id="Ash_Chicago" src="img/Ash_Chicago.JPG">
                     <img id="Ashley_NCC" src="img/Ashley_NCC.JPG">
                 </div>
                 <div class="col-sm-2 col-md-4">
-                    <img id="pre_race" src="img/Pre_Race_1.JPG">
+                    <img class="img-responsive" id="pre_race" src="img/Pre_Race_1.JPG">
                     <img id="biking_5" src="img/Biking_5.JPG">
                 </div>
             </div>
             <a style="text-align: right" href="https://howashleyseesit.wordpress.com/"><img alt="Link to Ashley's blog." id="wordpress-logo" src="img/wordpress-logo-notext-rgb.png"></a>
 
             <a style="text-align: right" href="https://twitter.com/aeisenmenger3"><img alt="Link to Ashley's Twitter page." id="twitter_logo" src="img/Twitter_Social_Icon_Rounded_Square_White.png"></a>
-        </div>
+        </div>-->
 
 
         <!--[if lt IE 8]>
